--- a/app/proconarumbills/webapp/manifest.json
+++ b/app/proconarumbills/webapp/manifest.json
@@ -106,6 +106,11 @@
           ]
         },
         {
+          "pattern": "CreateRequest",
+          "name": "CreateRequest",
+          "target": "CreateRequest"
+        },
+        {
           "pattern": "RequestDetail/{RequestId}",
           "name": "RequestDetail",
           "target": "RequestDetail"
@@ -116,6 +121,11 @@
           "id": "ListRequest",
           "viewId": "ListRequest",
           "viewName": "ListRequest"
+        },
+        "CreateRequest": {
+          "id": "CreateRequest",
+          "viewName": "CreateRequest",
+          "viewId": "CreateRequest"
         },
         "RequestDetail": {
           "id": "RequestDetail",
